fix(grid/grid): align tv within grid

--- a/src/grid/grid.css
+++ b/src/grid/grid.css
@@ -26,6 +26,10 @@
   padding-left: 0;
 }
 
+.grid-col--hero {
+  margin-top: 0.469rem;
+}
+
 .grid-item {
   margin: 0;
   width: 100%;
